<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp"
    >
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/swipe_main"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/covid_19_in_viet_nam_statistics"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <androidx.cardview.widget.CardView
                        style="@style/overview_card_view"
                        app:cardBackgroundColor="@color/gray">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <TextView
                                style="@style/describe_text"
                                android:text="@string/total" />

                            <TextView
                                android:id="@+id/tv_total_cases"
                                style="@style/content_text" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        style="@style/overview_card_view"
                        app:cardBackgroundColor="@color/green_200">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <TextView
                                style="@style/describe_text"
                                android:text="@string/recovered" />

                            <TextView
                                android:id="@+id/tv_total_recovered"
                                style="@style/content_text" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        style="@style/overview_card_view"
                        app:cardBackgroundColor="@color/cyan_100">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <TextView
                                style="@style/describe_text"
                                android:text="@string/treating" />

                            <TextView
                                android:id="@+id/tv_total_treating"
                                style="@style/content_text" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        style="@style/overview_card_view"
                        app:cardBackgroundColor="@color/red_100">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <TextView
                                style="@style/describe_text"
                                android:text="@string/deaths" />

                            <TextView
                                android:id="@+id/tv_total_death"
                                style="@style/content_text" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/update"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <androidx.cardview.widget.CardView
                        style="@style/overview_card_view"
                        app:cardBackgroundColor="@color/gray">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <TextView
                                style="@style/describe_text"
                                android:text="@string/total" />

                            <TextView
                                android:id="@+id/tv_today_cases"
                                style="@style/content_text" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        style="@style/overview_card_view"
                        app:cardBackgroundColor="@color/green_200">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <TextView
                                style="@style/describe_text"
                                android:text="@string/recovered" />

                            <TextView
                                android:id="@+id/tv_today_recovered"
                                style="@style/content_text" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        style="@style/overview_card_view"
                        app:cardBackgroundColor="@color/cyan_100">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <TextView
                                style="@style/describe_text"
                                android:text="@string/treating" />

                            <TextView
                                android:id="@+id/tv_today_treating"
                                style="@style/content_text" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        style="@style/overview_card_view"
                        app:cardBackgroundColor="@color/red_100">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <TextView
                                style="@style/describe_text"
                                android:text="@string/deaths" />

                            <TextView
                                android:id="@+id/tv_today_death"
                                style="@style/content_text" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/total_case_deaths_in_63_cities_and_provinces"
                    android:textStyle="bold" />
                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/swipe_main">

                    <TextView
                        style="@style/attr_text"
                        android:layout_weight="2"
                        android:text="@string/location" />

                    <TextView
                        style="@style/attr_text"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/total" />

                    <TextView
                        style="@style/attr_text"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/today" />

                    <TextView
                        style="@style/attr_text"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/deaths" />

                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recycle_view_internal_location_cases"
                    tools:listitem="@layout/item_locations_cases"
                    android:scrollbars="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    />
            </LinearLayout>



        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>